--- a/css/error.css
+++ b/css/error.css
@@ -6,32 +6,55 @@ body {
 	width: 100%;
 	height: 100vh;
 	color: rgb(0, 0, 0);
-	background: linear-gradient(-45deg, #000000, #000000,#000000, #475e6c, #000000,#000000,#000000);
+	background: linear-gradient(-45deg, #000000, #000000, #000000, #475e6c, #000000, #000000, #000000);
 	background-size: 400% 100%;
 	animation: gradientBG 20s ease infinite;
 }
 
-h3{
+h3, h5{
   text-align: center;
   color: #ffffff;
 }
 
-h5{
-  color:#fff;
-  text-align: center;
-  margin-bottom: 5%;
+.text{
+  width: max-content;
+  border-top: 2px solid #ffffff;
+  border-bottom: 2px solid white;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3%;
 }
 
 .glow {
-  font-size: 180px;
   margin-bottom: 0%;
-  margin-top:2%;
+  margin-top:4%;
   color: #fff;
   text-align: center;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
   -moz-animation: glow 1s ease-in-out infinite alternate;
   animation: glow 1s ease-in-out infinite alternate;
 }
+
+@media screen and (min-width: 601px){
+  .glow {
+    font-size: 10em;
+  }
+
+}
+@media screen and (max-width: 600px) {
+  .glow {
+    font-size: 3em;
+  }
+
+  h3{
+    font-size: 1em;
+  }
+
+  .text{
+    width: 50%;
+  }
+}
+
 
 @-webkit-keyframes glow {
   from {
@@ -72,7 +95,3 @@ h5{
 		background-position: 0% 50%;
 	}
 }
-
-
-
-
