--- a/css/error.css
+++ b/css/error.css
@@ -6,9 +6,10 @@ body {
 	width: 100%;
 	height: 100vh;
 	color: rgb(0, 0, 0);
-	background: linear-gradient(-45deg, #000000, #000000, #000000, #475e6c, #000000, #000000, #000000);
-	background-size: 400% 100%;
-	animation: gradientBG 20s ease infinite;
+  background: url(../img/1.jpg); 	
+  background-size: 150% 150%;
+  animation: gradientBG 40s ease infinite;
+  overflow-y: hidden;
 }
 
 h3, h5{
@@ -23,11 +24,12 @@ h3, h5{
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 3%;
+  padding: 0%;
 }
 
 .glow {
   margin-bottom: 0%;
-  margin-top:4%;
+  margin-top:7%;
   color: #fff;
   text-align: center;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
@@ -95,3 +97,7 @@ h3, h5{
 		background-position: 0% 50%;
 	}
 }
+
+
+
+
