--- a/css/error.css
+++ b/css/error.css
@@ -7,7 +7,7 @@ body {
 	height: 100vh;
 	color: rgb(0, 0, 0);
   background: url(../img/1.jpg); 	
-  background-size: 150% 150%;
+  background-size: 130% 130%;
   animation: gradientBG 40s ease infinite;
   overflow-y: hidden;
 }
@@ -28,8 +28,6 @@ h3, h5{
 }
 
 .glow {
-  margin-bottom: 0%;
-  margin-top:7%;
   color: #fff;
   text-align: center;
   -webkit-animation: glow 1s ease-in-out infinite alternate;
@@ -39,24 +37,45 @@ h3, h5{
 
 @media screen and (min-width: 601px){
   .glow {
+    margin-top:7%;
+    margin-bottom: 0%;
     font-size: 10em;
   }
 
 }
 @media screen and (max-width: 600px) {
   .glow {
+    margin-top:20%;
+    margin-bottom: 7%;
     font-size: 3em;
   }
 
+  body{
+    background-size: cover;
+  }
+
   h3{
-    font-size: 1em;
+    font-size: 0.95em;
+  }
+
+  h5{
+    font-size: 0.8em;
   }
 
   .text{
+    margin-top: 4%;
+    margin-bottom: 6%;
     width: 50%;
   }
 }
 
+@media screen and (max-height: 380px){
+  body{
+    height:100%;
+    overflow-y: initial;
+    overflow-x: hidden;
+  }
+}
 
 @-webkit-keyframes glow {
   from {
